--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <!-- Basic meta -->
-    <meta title="5374.jp 静岡県駿東郡清水町版" />
-    <meta name="description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
-    <meta keywords="" content="清水町,駿東郡清水町,5374,ゴミ収集,ゴミ回収" />
+    <meta title="5374.jp 静岡県駿東郡清水町英語版" />
+    <meta name="description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町英語版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
+    <meta keywords="" content="清水町,駿東郡清水町,英語版,5374,ゴミ収集,ゴミ回収" />
     <!-- //Basic meta -->
     <!-- OGP -->
     <meta property="og:title" content="5374.jp 静岡県駿東郡清水町版" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://hamamatsu.5374.jp/" />
+    <meta property="og:url" content="http://shimasho-shimizucho-en.5374.jp/" />
 <script>
 $(function(){
    $('a[href^=#]').click(function() {
@@ -24,9 +24,9 @@ $(function(){
 });
 </script>
 
-    <meta property="og:description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
+    <meta property="og:description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町英語版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
     <!-- //OGP -->
-    <title>5374(ｺﾞﾐﾅｼ).jp -静岡県駿東郡清水町版-</title> 
+    <title>5374(ｺﾞﾐﾅｼ).jp -静岡県駿東郡清水町英語版-</title> 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png" />
@@ -54,17 +54,18 @@ $(function(){
    <div class="accordion" id="accordion3">
      <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_4">注意事項</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_4">Attentions</a>
       </div>
       <div id="collapse3_4" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-           <FONT color=red><strong><p>〇可燃ごみ、埋立ごみ、プラスティックごみ以外のものは一般ごみステーションには絶対に出さないでください。</strong></FONT>
-（地区によっては古紙類等が出せます。区の役員の方に確認してください。）</p><br>
-			<p>〇使用済の乾電池は、役場、各地区公民館等に設置してある回収缶に随時入れてください。</p><br>
-			<p>〇事業に伴って生ずるごみは町では取扱いません。</p><br>
-			<p>〇タイヤ、バイク、バッテリー、廃油、農薬等の薬品、ＬＰＧガスボンベ等の危険物は取扱いません。</p><br>
-			<p>〇テレビ、冷蔵庫、冷凍庫、洗濯機、エアコン、衣類乾燥機、パソコンは収集致しません。</p><br><br>
+           <FONT color=red><strong><p>●Please do not leave any garbage other than burnable garbage, unburnable garbage and plastic garbage at your usual collection place.</p></strong></FONT>
+<br>
+			<p>●Whenever you need to throw away used batteries, please bring to the town 　hall or your district community center where collection cans are set.</p><br>
+			<p>●We do not collect any industrial refuse.</p><br>
+			<p>●We do not collect any dangerous substance such as tire, motorbike, battery, used oil, and chemical as in agricultural chemicals.</p><br>
+			<p>●TV, refrigerator, washing machine, air conditioner, drying machine and computer would not be collected.</p><br><br>
+			
 			<p>ごみの分別などについては清水町のホームページをご覧になるか</p><br>
 		<h4><a href="http://www.town.shimizu.shizuoka.jp/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>駿東郡清水町ホームページ</a></h4><br><br>
 		    <p>清水町役場地域振興課までお問い合わせください。</p><br>
