--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <!-- Basic meta -->
-    <meta title="5374.jp 静岡県駿東郡清水町英語版" />
-    <meta name="description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町英語版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
-    <meta keywords="" content="清水町,駿東郡清水町,英語版,5374,ゴミ収集,ゴミ回収" />
+    <meta title="5374.jp 静岡県駿東郡清水町版" />
+    <meta name="description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
+    <meta keywords="" content="清水町,駿東郡清水町,5374,ゴミ収集,ゴミ回収" />
     <!-- //Basic meta -->
     <!-- OGP -->
     <meta property="og:title" content="5374.jp 静岡県駿東郡清水町版" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://shimasho-shimizucho-en.5374.jp/" />
+    <meta property="og:url" content="http://hamamatsu.5374.jp/" />
 <script>
 $(function(){
    $('a[href^=#]').click(function() {
@@ -24,9 +24,9 @@ $(function(){
 });
 </script>
 
-    <meta property="og:description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町英語版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
+    <meta property="og:description" content="Code for Kanazawaの作った5374.jpの静岡県駿東郡清水町版です。5374.jpを使えば、あなたの地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
     <!-- //OGP -->
-    <title>5374(ｺﾞﾐﾅｼ).jp -静岡県駿東郡清水町英語版-</title> 
+    <title>5374(ｺﾞﾐﾅｼ).jp -静岡県駿東郡清水町版-</title> 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png" />
@@ -82,43 +82,28 @@ $(function(){
     <div class="accordion-group-top">
       <div class="accordion-heading">
       <div id="index"></div>
-      <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_1">粗大ごみ</a>
+      <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_1">Large-size refuse</a>
       </div>
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
    
-  <FONT color=#0000ff>粗大ごみ、予約制で有料（ただし小型家電は無料）です。以下のとおり、粗大ごみ置き場に連絡し個人で搬入してください。<a href="tel:0559710530" style=" color: #000000;text-decoration: underline;" target=”_blank”>(予約先 055-971-0530)</a></FONT><br><br>
-<FONT color=#0000ff><strong>１　粗大ごみ置場に連絡し予約する。</strong></FONT><br>
-電話または粗大ごみ置場にて粗大ごみ持ち込み日を確かめる。<br>
-予約、搬入時間 ９時から１６時まで<br>
-<a href="tel:0559710530" style=" color: #000000;text-decoration: underline;" target=”_blank”>電話055-971-0530</a>（年末年始を除く毎日）<br>
-住所、氏名、電話番号、搬入する粗大ごみの品目と数を連絡する。（当日の予約、追加はできません。）<br>
+  <FONT color=#0000ff>Large-size refuse needs reservation. Please contact the large-size refuse collector and individually take the productsto the place.</FONT><br><br>
+<FONT color=#0000ff><strong>①Contact the large-size refuse collector for reservation.</strong></FONT><br>
+Call the large-size refuse collector or drop by the place to check available dates to bring in your refuse.<br>
+9：00～16：00　（Reservation/Delivery time）<br>
+Contact and give details such as: your address, name, telephone number, large-size refuse you wish to bring and number of items.(We would not accept a reservation on the same day of delivery or additional item(s) that you have previously declared before the day.）<br>
 
- 
-<FONT color=#0000ff><strong>２　粗大ごみ置場に粗大ごみを搬入する。</strong></FONT><br>
-搬入時は置場での混雑が予想されます。車の出入りに御注意ください。<br>
-搬入時に、本人確認をさせていただきますので、運転免許証や保険証をお持ちください。<br>
+<FONT color=#0000ff><strong>②Deliver your refuse to the large-size refuse collection place.</strong></FONT><br>
+The collection place could be crowded. Be careful when you drive your car in.<br>
 
-<FONT color=#0000ff><strong>３　粗大ごみ処理の料金</strong></FONT><br>
-ごみの重さ	金額（料金）<br>
-３０Kg以下	２００円<br>
-３０Kgを超え５０Kg以下	３００円<br>
-５０Kgを超え１００Kg以下	５００円<br>
-１００Kｇを超える場合<br>
-以後５０Kgごとに	＋３００円<br>
-障がい者、高齢者、母子家庭等の住民税非課税世帯の方は、役場地域振興課へ事前申請することによって、処理費を免除することができます。<br>
+<FONT color=#0000ff><strong>Matters that require attention when delivering.</strong></FONT><br>
 
-<FONT color=#0000ff><strong>その他</strong></FONT><br>
-障がい者、高齢者、母子家庭等の世帯については、地区の民生委員さんに御相談ください。<br>
-（御自身で搬入できない方に限ります。）<br>
-御自身で搬入できない方は、町シルバー人材センター<a href="tel:0559735949" style=" color: #000000;text-decoration: underline;" target=”_blank”>（電話055-973-5949）</a>が代行（有料）いたします。<br>
-
-<FONT color=#0000ff><strong>出し方の注意点</strong></FONT><br>
-家具ベット等はなるべく分解して持ち込んでください。<br>
-粗大ごみとして持ち込む製品はダンボールから出して持ち込んでください。<br>
-テレビ、冷蔵庫、洗濯機（衣服乾燥機）、エアコン、パソコンは回収いたしません。（電気店等に相談）<br>
-消火器、タイヤ、農機具は業者へ<br><br>
+Papers, old clothes and cardboard need to be cross-tied with white paper cord.<br>
+Please follow the instructions of a staff and unload the item by yourself.<br>
+You can only bring item(s) full of one pickup truck per delivery.<br>
+There are things that we can not accept. Please　 check the details when you reserve.<br>
+We will need to identify that you are a town resident before we accept your refuse. Please bring your driver’s license or other documents as a bill for public service charge, which can prove that you are a resident of thetown.<br><br>
 <div id="1">
 	<a class="button" href="#index"><p style="color: red">トップに戻る</p></a>
 </div>
