--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $(function(){
         <div class="accordion-inner">
           <div id="help">
    
-  <FONT color=#0000ff>Large-size refuse needs reservation. Please contact the large-size refuse collector and individually take the productsto the place.</FONT><br><br>
+  <FONT color=#0000ff>Large-size refuse needs reservation. Please contact the large-size refuse collector and individually take the productsto the place.<a href="tel:0559710530" style=" color: #000000;text-decoration: underline;" target=”_blank”>(Phone number for reservation 055-971-0530)</a></FONT><br><br>
 <FONT color=#0000ff><strong>①Contact the large-size refuse collector for reservation.</strong></FONT><br>
 Call the large-size refuse collector or drop by the place to check available dates to bring in your refuse.<br>
 9：00～16：00　（Reservation/Delivery time）<br>
