--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@ $(function(){
    
   <FONT color=#0000ff>Large-size refuse needs reservation. Please contact the large-size refuse collector and individually take the productsto the place.<a href="tel:0559710530" style=" color: #000000;text-decoration: underline;" target=”_blank”>(Phone number for reservation 055-971-0530)</a></FONT><br><br>
 <FONT color=#0000ff><strong>①Contact the large-size refuse collector for reservation.</strong></FONT><br>
-○Call the large-size refuse collector or drop by the place to check available dates to bring in your refuse.<br>
-○9：00～16：00　（Reservation/Delivery time）<br>
-○Contact and give details such as: your address, name, telephone number, large-size refuse you wish to bring and number of items.(We would not accept a reservation on the same day of delivery or additional item(s) that you have previously declared before the day.）<br>
+●Call the large-size refuse collector or drop by the place to check available dates to bring in your refuse.<br>
+●9：00～16：00　（Reservation/Delivery time）<br>
+●Contact and give details such as: your address, name, telephone number, large-size refuse you wish to bring and number of items.(We would not accept a reservation on the same day of delivery or additional item(s) that you have previously declared before the day.）<br>
 
 <FONT color=#0000ff><strong>②Deliver your refuse to the large-size refuse collection place.</strong></FONT><br>
-○The collection place could be crowded. Be careful when you drive your car in.<br>
+●The collection place could be crowded. Be careful when you drive your car in.<br>
 
 <FONT color=#0000ff><strong>③Matters that require attention when delivering.</strong></FONT><br>
 
-○Papers, old clothes and cardboard need to be cross-tied with white paper cord.<br>
-○Please follow the instructions of a staff and unload the item by yourself.<br>
-○You can only bring item(s) full of one pickup truck per delivery.<br>
-○There are things that we can not accept. Please check the details when you reserve.<br>
-○We will need to identify that you are a town resident before we accept your refuse. Please bring your driver’s license or other documents as a bill for public service charge, which can prove that you are a resident of thetown.<br><br>
+●Papers, old clothes and cardboard need to be cross-tied with white paper cord.<br>
+●Please follow the instructions of a staff and unload the item by yourself.<br>
+●You can only bring item(s) full of one pickup truck per delivery.<br>
+●There are things that we can not accept. Please check the details when you reserve.<br>
+●We will need to identify that you are a town resident before we accept your refuse. Please bring your driver’s license or other documents as a bill for public service charge, which can prove that you are a resident of thetown.<br><br>
 <div id="1">
 	<a class="button" href="#index"><p style="color: red">トップに戻る</p></a>
 </div>
