--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ $(function(){
   <tr>
    <td><img src="yuusui1.png" width="83" height="116" ></td>
     <td><p><h3>５３７４アプリ　駿東郡清水町版</h3></p>
-  <p>掲載がないものについては、ごみの収集日一覧を参照いただくか、<a href="tel:0559731111" style=" color: #000000;text-decoration: underline;" target=”_blank”>清水町役場055-973-1111（代表）</a>までお問い合わせください。</p></td>
+  <p>◎Regarding the rubbish classification,please refer to the Shimizu town website or contact the Community Promotion Department at the Shimizu town office.
+<a href="tel:0559731111" style=" color: #000000;text-decoration: underline;" target=”_blank”>TEL 055-973-1111（代表）</a></p></td>
    <td><img src="yuusui2.png" width="83" height="116"></td>
     </tr>
     </table>
